--- a/templates/albania1-tour.html
+++ b/templates/albania1-tour.html
@@ -12,7 +12,7 @@
 				<div class="col-md-4" >
 					<!-- Logo -->
 					<a class="logo" href="/">
-						<img src="{% static "img/bt_logo.jpg"%}" height="60" width="100" alt="Logo">
+						<img src="{% static "img/logo_turkuaz.png"%}" height="60" width="100" alt="Logo">
 					</a>
 					<!-- End Logo -->
 				</div>
@@ -160,145 +160,145 @@
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/akcahisar/slider900x600/akcahisar.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Akçahisar</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/akcahisar/slider900x600/akcahisar-carsi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Akçahisar Çarşısı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/akcahisar/slider900x600/akcahisar-hamam.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Akçahisar Hamamı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/akcahisar/slider900x600/akcahisar-iskenderbey.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>İskender Bey</p>
 													</div>
 												</div>
 												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/akcahisar/slider900x600/akcahisar-muratbeycamii.jpg"%}" alt=""/>												.jpg"%}" alt=""/>
+													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/akcahisar/slider900x600/akcahisar-muratbeycamii.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Muratbey Camii </p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/akcahisar/slider900x600/akcahisar-muze.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Müze</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/akcahisar/slider900x600/Akcahisar-sari.JPG"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Sarı Saltuk Türbesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/akcahisar/slider900x600/akcahisar-sarisaltukturbesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Sarı Saltuk Türbesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/akcahisar/slider900x600/akcahisar-sehir.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Akçahisar</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/akcahisar/slider900x600/akcahisareskicarsi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Eski Çarşı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/akcahisar/slider900x600/akcahisarkalesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Akçahisar Kalesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/akcahisar/slider900x600/akcahisarll.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Akçahisar</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/akcahisar/slider900x600/akcahisarsehirturu.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Şehir Turu</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/iskodra/slider900x600/iskodra-cadde.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>İşkodra</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/iskodra/slider900x600/iskodra-ev.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>İşkodra</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/iskodra/slider900x600/iskodra-kale.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>İşkodra Kalesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/iskodra/slider900x600/iskodra-kursunlu.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Kurşunlu</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/iskodra/slider900x600/iskodra-kursunlucamii.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Kurşunlu Camii</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/iskodra/slider900x600/iskodra-kursunlucamii2.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Kurşunlu Camii</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/iskodra/slider900x600/iskodracaddel.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>İşkodra</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/iskodra/slider900x600/iskodrakalesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>İşkodra Kalesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/iskodra/slider900x600/iskodrakopru.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Köprü</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/iskodra/slider900x600/iskodrameydani.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>İşkodra Meydanı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/iskodra/slider900x600/iskodraucirmak.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>İskodra Üç Irmak</p>
 													</div>
 												</div>
 											</div>
@@ -314,7 +314,7 @@
 										</div>
 									</div>
 								<h4>Genel Açıklama</h4>
-								<p>...</p>
+								{% placeholder 'day1' %}
 							</div>
 						</li>
 						<li class="equal-height-columns">
@@ -343,67 +343,67 @@
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/berat/slider900x600/berat.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Berat</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/berat/slider900x600/berat-camiikilise.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Camii ve Kilise</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/berat/slider900x600/berat-hunkarcamii.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Hünkar Camii</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/berat/slider900x600/berat-kalekizilcamii.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Kale Kızıl Camii</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/berat/slider900x600/beratkale.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Berat Kalesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/berat/slider900x600/beratsehir.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Berat</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/berat/slider900x600/beratsenmerikilise.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Senmeri Kilisesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/berat/slider900x600/beratsokak.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Berat</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/berat/slider900x600/beratt.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Berat</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/berat/slider900x600/berattabiat.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Berat</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/berat/slider900x600/berattt.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Berat</p>
 													</div>
 												</div>
 
@@ -419,7 +419,7 @@
 										</div>
 									</div>
 								<h4>Genel Açıklama</h4>
-								<p>...</p>
+								{% placeholder 'day2' %}
 							</div>
 						</li>
 						<li class="equal-height-columns">
@@ -446,61 +446,61 @@
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/tiran/slider900x600/Enver-Hoca-siginak.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Enver Hoca Sığınağı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/tiran/slider900x600/TIRAN-ETHEMBEY.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Ethem Bey</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/tiran/slider900x600/tiran-opera.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Tiran Opera</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/tiran/slider900x600/tiran-piramit.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Piramit</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/tiran/slider900x600/TIRAN-SAATKULESI.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Saat Kulesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/tiran/slider900x600/tiran-sanatgalerisi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Sanat Galerisi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/tiran/slider900x600/tiranbunker.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Sığınak</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/tiran/slider900x600/tiranethembeycamii.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Ethem Bey Camii</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/tiran/slider900x600/tiraniskenderheykeli.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>İskender Heykeli</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/tiran/slider900x600/tiran-meydan.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Tiran Meydanı</p>
 													</div>
 												</div>
 											</div>
@@ -516,7 +516,7 @@
 										</div>
 									</div>
 								<h4>Genel Açıklama</h4>
-								<p>...</p>
+								{% placeholder 'day3' %}
 							</div>
 						</li>
 					</ul>
