--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,7 +12,7 @@
 				<div class="col-md-4" >
 					<!-- Logo -->
 					<a class="logo" href="/">
-						<img src="{% static "img/bt_logo.jpg"%}" height="60" width="100" alt="Logo">
+						<img src="{% static "img/logo_turkuaz.png"%}" height="60" width="100" alt="Logo">
 					</a>
 					<!-- End Logo -->
 				</div>
@@ -114,8 +114,8 @@
 					<ul class="list-unstyled who margin-bottom-30">
 						<li><a href="#"><i class="fa fa-home"></i>Pijacna br. 8, Sarajevo <br />
 								71000, Bosnia and Herzegovina <br</a></li>
-						<li><a href="#"><i class="fa fa-envelope"></i>info@brighttravel.tours</a></li>
-						<li><a href="#"><i class="fa fa-phone"></i>+387-33-123 456</li>
+						<li><a href="#"><i class="fa fa-envelope"></i>info@bright.tours</a></li>
+						<li><a href="#"><i class="fa fa-phone"></i>+387-61-089517</li>
 						<li><a href="#"><i class="fa fa-globe"></i>http://www.bright.tours</a></li>
 						<li>Viber / Whatsapp / Kakao / Line:</li>
 						<li><i class="fa fa-mobile"></i>+387-61-089517</li>
