--- a/templates/dailytours.html
+++ b/templates/dailytours.html
@@ -12,7 +12,7 @@
 				<div class="col-md-4" >
 					<!-- Logo -->
 					<a class="logo" href="/">
-						<img src="{% static "img/bt_logo.jpg"%}" height="60" width="100" alt="Logo">
+						<img src="{% static "img/logo_turkuaz.png"%}" height="60" width="100" alt="Logo">
 					</a>
 					<!-- End Logo -->
 				</div>
@@ -103,7 +103,7 @@
 									<img class="img-responsive" src="{% static "img-temp/cities/tabs400x250/sarajevo.jpg"%}" alt="">
 									<p>
 										<span>SARAYBOSNA</span>
-										<span>50€</span>
+										<span>45€</span>
 									</p>
 								</div>
 							</div>
@@ -112,7 +112,7 @@
 									<img class="img-responsive" src="{% static "img-temp/cities/tabs400x250/mostar.jpg"%}" alt="">
 									<p>
 										<span>MOSTAR</span>
-										<span>50€</span>
+										<span>70€</span>
 									</p>
 								</div>
 							</div>
@@ -121,37 +121,7 @@
 									<img class="img-responsive" src="{% static "img-temp/cities/tabs400x250/travnik.jpg"%}" alt="">
 									<p>
 										<span>TRAVNİK</span>
-										<span>50€</span>
-									</p>
-								</div>
-							</div>
-						</div>
-						<br>
-						<div class="row news-v2">
-							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge">
-									<img class="img-responsive" src="{% static "img-temp/cities/tabs400x250/bihac.jpg"%}" alt="">
-									<p>
-										<span>BİHAÇ</span>
-										<span>50€</span>
-									</p>
-								</div>
-							</div>
-							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge">
-									<img class="img-responsive" src="{% static "img-temp/cities/tabs400x250/tuzla.jpg"%}" alt="">
-									<p>
-										<span>TUZLA</span>
-										<span>50€</span>
-									</p>
-								</div>
-							</div>
-							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge">
-									<img class="img-responsive" src="{% static "img-temp/cities/tabs400x250/srebrenica.jpg"%}" alt="">
-									<p>
-										<span>SREBRENİTSA</span>
-										<span>50€</span>
+										<span>65€</span>
 									</p>
 								</div>
 							</div>
@@ -163,7 +133,7 @@
 									<img class="img-responsive" src="{% static "img-temp/cities/tabs400x250/visegrad.jpg"%}" alt="">
 									<p>
 										<span>VİŞEGRAD</span>
-										<span>50€</span>
+										<span>65€</span>
 									</p>
 								</div>
 							</div>
@@ -171,8 +141,8 @@
 								<div class="news-v2-badge">
 									<img class="img-responsive" src="{% static "img-temp/cities/tabs400x250/fojnica.jpg"%}" alt="">
 									<p>
-										<span>FOJNİTSA</span>
-										<span>50€</span>
+										<span>AYDİNOVİÇ</span>
+										<span>70€</span>
 									</p>
 								</div>
 							</div>
@@ -180,8 +150,8 @@
 								<div class="news-v2-badge">
 									<img class="img-responsive" src="{% static "img-temp/cities/tabs400x250/jajce.jpg"%}" alt="">
 									<p>
-										<span>JAİTSE</span>
-										<span>50€</span>
+										<span>YAİTSE</span>
+										<span>70€</span>
 									</p>
 								</div>
 							</div>
