--- a/templates/hk-tour.html
+++ b/templates/hk-tour.html
@@ -12,7 +12,7 @@
 				<div class="col-md-4" >
 					<!-- Logo -->
 					<a class="logo" href="/">
-						<img src="{% static "img/bt_logo.jpg"%}" height="60" width="100" alt="Logo">
+						<img src="{% static "img/logo_turkuaz.png"%}" height="60" width="100" alt="Logo">
 					</a>
 					<!-- End Logo -->
 				</div>
@@ -250,7 +250,7 @@
 										</div>
 									</div>
 								<h4>Genel Açıklama</h4>
-								<p>...</p>
+								{% placeholder 'adriyatik-day1' %}
 							</div>
 						</li>
 						<li class="equal-height-columns">
@@ -365,7 +365,7 @@
 										</div>
 									</div>
 								<h4>Genel Açıklama</h4>
-								<p>...</p>
+								{% placeholder 'adriyatik-day2' %}
 							</div>
 						</li>
 						<li class="equal-height-columns">
@@ -591,7 +591,7 @@
 										</div>
 									</div>
 								<h4>Genel Açıklama</h4>
-								<p>...</p>
+								{% placeholder 'adriyatik-day3' %}
 							</div>
 						</li>
 						<li class="equal-height-columns">
@@ -669,7 +669,7 @@
 										</div>
 									</div>
 								<h4>Genel Açıklama</h4>
-								<p>...</p>
+								{% placeholder 'adriyatik-day4' %}
 							</div>
 						</li>
 					</ul>
