--- a/templates/homeen2.html
+++ b/templates/homeen2.html
@@ -22,7 +22,7 @@
 			<div class="collapse navbar-collapse navbar-ex1-collapse">
 				<div class="menu-container">
 					<a href="#body">
-						<img src="{% static "img/bt_logo.jpg"%}" height="100" width="200" alt="BRIGHT TOURS">
+						<img src="{% static "img/logo_turkuaz.png"%}" height="100" width="200" alt="BRIGHT TOURS">
 					</a>
 					<ul class="nav navbar-nav">
 						<li class="page-scroll">
@@ -66,7 +66,7 @@
 			</h3>
 			<div class="ms-layer ms-promo-travel-description" style="left: 15px; top: 324px;" data-type="text" data-delay="30" data-effect="rotate3dbottom(100,0,0,70)" data-ease="easeOutExpo" data-duration="2300">
 				<p class="g-mb-20 hidden-sm hidden-xs">Unutamayacağınız bir tatil</p>
-				<p><a href="/bosnia-tours" class="btn-u btn-u-lg btn-u-red btn-u-upper">Ayrıntılar<span class="visible-3xs"> to Karlovy Vary, Czech</span></a></p>
+				<p><a href="/bosnia-tours" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">BOSNA HERSEK TURLARI - </span>Ayrıntılar</a></p>
 			</div>
 			<img class="ms-thumb" src="{% static "img-temp/promo/thumbs/sarajevosebil3.jpg"%}" alt="ALT">
 		</div>
@@ -83,7 +83,7 @@
 			</h3>
 			<div class="ms-layer ms-promo-travel-description" style="left: 15px; top: 324px;" data-type="text" data-delay="30" data-effect="rotate3dbottom(100,0,0,70)" data-ease="easeOutExpo" data-duration="2300">
 				<p class="g-mb-20 hidden-sm hidden-xs">Unutamayacağınız bir tatil</p>
-				<p><a href="/balkan-tours/bk-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper">Ayrıntılar<span class="visible-3xs"> to London, Great Britain</span></a></p>
+				<p><a href="/balkan-tours/bk-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">BOSNA HERSEK - KARADAĞ - </span>Ayrıntılar</a></p>
 			</div>
 			<img class="ms-thumb" src="{% static "img-temp/promo/thumbs/kotor.jpg"%}" alt="thumb">
 		</div>
@@ -100,7 +100,7 @@
 			</h3>
 			<div class="ms-layer ms-promo-travel-description" style="left: 15px; top: 324px;" data-type="text" data-delay="10" data-effect="rotate3dbottom(100,0,0,70)" data-ease="easeOutExpo" data-duration="2300">
 				<p class="g-mb-20 hidden-sm hidden-xs">Unutamayacağınız bir tatil</p>
-				<p><a href="/balkan-tours/bs-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper">Ayrıntılar<span class="visible-3xs"> to Crete, Greece</span></a></p>
+				<p><a href="/balkan-tours/bs-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">BOSNA HERSEK - SIRBİSTAN - </span>Ayrıntılar</a></p>
 			</div>
 			<img class="ms-thumb" src="{% static "img-temp/promo/thumbs/serbia.jpg"%}" alt="thumb">
 		</div>
@@ -117,7 +117,7 @@
 			</h3>
 			<div class="ms-layer ms-promo-travel-description" style="left: 15px; top: 324px;" data-type="text" data-delay="30" data-effect="rotate3dbottom(100,0,0,70)" data-ease="easeOutExpo" data-duration="2300">
 				<p class="g-mb-20 hidden-sm hidden-xs">Unutamayacağınız bir tatil</p>
-				<p><a href="/balkan-tours/km-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper">Ayrıntılar<span class="visible-3xs"> to Langkawi, Malaysia</span></a></p>
+				<p><a href="/balkan-tours/km-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">KOSOVA - MAKEDONYA - </span>Ayrıntılar</a></p>
 			</div>
 			<img class="ms-thumb" src="{% static "img-temp/promo/thumbs/kosova.jpg"%}" alt="thumb">
 		</div>
@@ -134,7 +134,7 @@
 			</h3>
 			<div class="ms-layer ms-promo-travel-description" style="left: 15px; top: 324px;" data-type="text" data-delay="30" data-effect="rotate3dbottom(100,0,0,70)" data-ease="easeOutExpo" data-duration="2300">
 				<p class="g-mb-20 hidden-sm hidden-xs">Unutamayacağınız bir tatil</p>
-				<p><a href="/balkan-tours/bkkm-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper">Ayrıntılar<span class="visible-3xs"> to Bavaria, Germany</span></a></p>
+				<p><a href="/balkan-tours/bkkm-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">GÜNÜ BİRLİK TURLAR - </span>Ayrıntılar</a></p>
 			</div>
 			<img class="ms-thumb" src="{% static "img-temp/promo/thumbs/kotor.jpg"%}" alt="thumb">
 		</div>
@@ -151,7 +151,7 @@
 			</h3>
 			<div class="ms-layer ms-promo-travel-description" style="left: 15px; top: 324px;" data-type="text" data-delay="30" data-effect="rotate3dbottom(100,0,0,70)" data-ease="easeOutExpo" data-duration="2300">
 				<p class="g-mb-20 hidden-sm hidden-xs">Unutamayacağınız bir tatil</p>
-				<p><a href="/balkan-tours/hk-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper">Ayrıntılar<span class="visible-3xs"> to Paris, France</span></a></p>
+				<p><a href="/balkan-tours/hk-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">ADRİYATİK - </span>Ayrıntılar</a></p>
 			</div>
 			<img class="ms-thumb" src="{% static "img-temp/promo/thumbs/croatia.jpg"%}" alt="thumb">
 		</div>
@@ -168,7 +168,7 @@
 			</h3>
 			<div class="ms-layer ms-promo-travel-description" style="left: 15px; top: 324px;" data-type="text" data-delay="30" data-effect="rotate3dbottom(100,0,0,70)" data-ease="easeOutExpo" data-duration="2300">
 				<p class="g-mb-20 hidden-sm hidden-xs">Unutamayacağınız bir tatil</p>
-				<p><a href="/bosnia-tours/sm-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper">Ayrıntılar<span class="visible-3xs"> to Paris, France</span></a></p>
+				<p><a href="/bosnia-tours/sm-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">SARAYBOSNA - MOSTAR </span>Ayrıntılar</a></p>
 			</div>
 			<img class="ms-thumb" src="{% static "img-temp/promo/thumbs/mostar.jpg"%}" alt="thumb">
 		</div>
