--- a/templates/topbar.html
+++ b/templates/topbar.html
@@ -12,5 +12,7 @@
 						<li><a href="https://www.facebook.com/Bright-Travel-1629987677029220/"><i class="fa fa-facebook"></i></a></li>
 						<li>&nbsp</li>
 						<li><a href="https://twitter.com/BosniaBright"><i class="fa fa-twitter"></i></a></li>
+						<li>&nbsp</li>
+						<li><a href="https://www.instagram.com/bright.tours/"><i class="fa fa-instagram"></i></a></li>
 					</ul>
 				</div>
