--- a/templates/sarajevotour.html
+++ b/templates/sarajevotour.html
@@ -12,7 +12,7 @@
 				<div class="col-md-4" >
 					<!-- Logo -->
 					<a class="logo" href="/">
-						<img src="{% static "img/bt_logo.jpg"%}" height="60" width="100" alt="Logo">
+						<img src="{% static "img/logo_turkuaz.png"%}" height="60" width="100" alt="Logo">
 					</a>
 					<!-- End Logo -->
 				</div>
@@ -361,11 +361,7 @@
 										</div>
 									</div>
 								<h4>Genel Açıklama</h4>
-								<p>Havaalanında yetkili rehberimiz tarafından karşılama yapıldıktan sonra Vidikovac (bakiya) tepesinden Saraybosna’yı kuşbakışı seyrediyoruz. Osmanlı Çeşmesi’nden su içip ve Fatih Sultan Mehmet’in şehre girdiği kapıdan Saraybosna’ya giriş yapıyoruz. Tarihi askeri kışla binası Beyaz Tabyanın gezilmesinin ardından 1992-1995 yıllarında yaşanan hazin savaşın şehitleri ve Aliya Izetbegoviç’in mezarının bulunduğu Kovaçi şehitliğini ziyaret ediyoruz. Öğlen yemeği olarak dünyanın en nefis böreği olan Boşnak Böreği ziyafetinin devamında Avrupa’da Anadolu’nun izdüşümü Başçarşı’daki turumuza başlıyoruz. Başçarşıda 300 yılı aşkın süreyle çeşmelerinden ab-ı hayat akan esnaf sebili önünde güvervinlerle fotoğraf çektirdikten sonra Moriça Han'da Türk çayı yudumlayıp kısa bir dinlenme molası veriyoruz.  Kanuni Sultan Süleyman’ın halasının oğlu Gazi Hüsrev Bey’in yaptırdığı, ıhlamur kokulu bahçesi, şadırvanı ve türbeleriyle Gazi Hüsrev Begova camiini gezip tarihi ve mimarisini dinleyip İnşa edildiği tarihten bu güne eğitimine ara vermeden devam eden Kurşunlu Medresesi’ni görüyoruz. Orijinal güneş sistemli saati ile Osmanlı Sahat Kulesini, Gazi Husrev Beg Bezistanını, Doğu ile Batının buluşma noktasını, Merkez Katolik katedralini, Saraybosna Güllerini (Savaş zamanı bir bomba ile beşten fazla kişinin hayatını kaybettiği noktalar)arkada bıraktıktan sonra 5 Şubat 1994’te “Pazar Yeri Katliamı” olarak anılan ve 67 kişinin hayatını kaybettiği Markale Semt Pazarına uğruyor ve hayatını kaybedenleri bir kez daha hatırlamış oluyoruz. Fırın yeri katliamının yapıldığı noktayı görüp 6 Nisan 1945’te Yugoslav ordusu tarafından Almanların işgalindeki Saraybosna’nın kurtarılışı anısına yakılan sönmeyen ateşten birer kare fotoğraf almayı unutmuyoruz. Turumuzun devamında Aliya Izetbegoviç Parkı ve parkta sürekli satranç oynayan Saraybosnalıları, İsa’nın kalbi merkez Ortodoks kilisesini,
-Kendine has mimarisiyle Papagayka binasını, 450 yıllık mazisiyle Bakrbabina Camiini ve eski çınarlarıyla at meydanını görüyoruz. Birinci Dünya Savaşı’nın çıktığı Latin (Hünkâr) Köprüsü’nü
-Fatih Sultan Mehmet adına inşa edilen Hünkâr Camiini, Şeherçayina köprüsünü, Bosna Savaşında günlerce yanan, binlerce el yazması eserin yok olduğu eski meclis günümüzün kütüphane binası olan Vyeçnitsa (vjecnica)’yı gezerek gezimizi bitiriyoruz. Akşam yemeğinde Başçarşı’da Boşnak Çevabi ikramımız olacak. Sonrasında Başçarşıda çay ve trileçe için de zamanımız yok değil.
-Otelimize geçerek bir sonraki güne hazırlanıyoruz.
-</p>
+								{% placeholder 'day1' %}
 							</div>
 						</li>
 						<li class="equal-height-columns">
@@ -414,7 +410,7 @@ Otelimize geçerek bir sonraki güne hazırlanıyoruz.
 										</div>
 									</div>
 								<h4>Genel Açıklama</h4>
-								<p>...</p>
+								{% placeholder 'day2' %}
 							</div>
 						</li>
 					</ul>
